# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml  python.yml
gendiff/: __init__.py  gendiff.py  generate_diff.py
gendiff/formatters/: stylish_formated.py
gendiff/scripts/: generate_diff.py  read_file.py
src/gendiff/: gendiff.py  generate_diff.py
src/gendiff/scripts/: __init__.py  gendiff.py  generate_diff.py
tests/: test_diff.py  test_generate_diff.py
