

[project]
name = "hexlet-code"
version = "1.0.0"
description = "Compare two configuration files and shows a difference"
authors = [
    {name = "Ivan Dozmorov", email = "idozmor@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "requests>=2.32.0",       
    "PyYAML>=6.0",  
    ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",          
    "pytest>=8.0.0",         
    "pytest-cov>=4.0.0",    
    "build>=1.0.0",         
    "twine>=4.0.0"        
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

